--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'org.springframework.boot' version '2.4.2'
 }
 
 group 'org.example'
